force-app/main/default/objects/public_purchase_orders__x/public_purchase_orders__x.object-meta.xml
<CustomObject>
    <description>public$purchase_orders</description>
    <externalDataSource>ExternalData</externalDataSource>
    <externalName>public$purchase_orders</externalName>
    <label>Purchase Order (External)</label>
    <pluralLabel>Purchase Orders (External)</pluralLabel>
</CustomObject>