force-app/main/default/objects/public_purchase_orders__x/fields/contact__c.field-meta.xml
<CustomField>
    <fullName>contact__c</fullName>
    <description>contact</description>
    <externalDeveloperName>contact</externalDeveloperName>
    <label>Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>