force-app/main/default/objects/public_purchase_orders__x/fields/currency__c.field-meta.xml
<CustomField>
    <fullName>currency__c</fullName>
    <description>currency</description>
    <externalDeveloperName>currency</externalDeveloperName>
    <label>Currency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>