force-app/main/default/objects/public_purchase_orders__x/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <description>id</description>
    <externalDeveloperName>id</externalDeveloperName>
    <label>ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>