force-app/main/default/objects/public_purchase_orders__x/fields/netsum__c.field-meta.xml
<CustomField>
    <fullName>netsum__c</fullName>
    <description>netsum</description>
    <externalDeveloperName>netsum</externalDeveloperName>
    <label>Net</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>