force-app/main/default/objects/public_purchase_orders__x/fields/phone__c.field-meta.xml
<CustomField>
    <fullName>phone__c</fullName>
    <description>phone</description>
    <externalDeveloperName>phone</externalDeveloperName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>