force-app/main/default/objects/public_purchase_orders__x/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <description>status</description>
    <externalDeveloperName>status</externalDeveloperName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>