force-app/main/default/objects/public_purchase_orders__x/fields/supplier__c.field-meta.xml
<CustomField>
    <fullName>supplier__c</fullName>
    <description>supplier</description>
    <externalDeveloperName>supplier</externalDeveloperName>
    <label>Supplier Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>