force-app/main/default/objects/public_purchase_orders__x/fields/supplierid__c.field-meta.xml
<CustomField>
    <fullName>supplierid__c</fullName>
    <description>supplierid</description>
    <externalDeveloperName>supplierid</externalDeveloperName>
    <label>Supplier</label>
    <length>255</length>
    <referenceTargetField>Account.External_ID__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders (External)</relationshipLabel>
    <relationshipName>Purchase_Orders_External</relationshipName>
    <type>IndirectLookup</type>
</CustomField>