force-app/main/default/objects/public_purchase_orders__x/fields/tax__c.field-meta.xml
<CustomField>
    <fullName>tax__c</fullName>
    <description>tax</description>
    <externalDeveloperName>tax</externalDeveloperName>
    <label>Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>