force-app/main/default/objects/public_purchase_orders__x/fields/totalsum__c.field-meta.xml
<CustomField>
    <fullName>totalsum__c</fullName>
    <description>totalsum</description>
    <externalDeveloperName>totalsum</externalDeveloperName>
    <label>Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>