force-app/main/default/objects/public_purchase_orders__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>id__c</columns>
    <columns>supplierid__c</columns>
    <columns>contact__c</columns>
    <columns>status__c</columns>
    <columns>netsum__c</columns>
    <columns>tax__c</columns>
    <columns>totalsum__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>